--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    @font-face {
+        font-family: "Poppins";
+        src: url("/fonts/Poppins-Regular.ttf");
+        font-weight: 400;
+    }
+
+    @font-face {
+        font-family: "Poppins";
+        src: url("/fonts/Poppins-Medium.ttf");
+        font-weight: 500;
+    }
+    @font-face {
+        font-family: "Poppins";
+        src: url("/fonts/Poppins-Bold.ttf");
+        font-weight: 600;
+    }
+}
